# iniparser

./: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  README  THANKS  TODO
doc/: iniparser.md
examples/iniex1/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  iniparser.cpp  iniparser.h
